--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
     First website
   </title>
   
-  <body>
+  <body style="background-color:yellow">
     <h1>This is my first github page</h1>
   </body>
-  
-  <style>
-    body {
-      background-color:green
-      text-align:center
-    }
-  </style>
+ 
     
 </html>
