--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     First website
   </title>
   
-  <body style="background-color:yellow">
+  <body bgcolor="green">
     <h1>This is my first github page</h1>
   </body>
  
