--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 
 <html>
   <title>
-    First website
+    yuqing xu
   </title>
   
-  <body bgcolor="green">
-    <h1>This is my first github page</h1>
+  <body bgcolor="yellow">
+    <h1 align="center" style="color:white">Hello!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+    <p> 
+    Hello!!! I am Yuqing Xu!! I am a student in the division of general study in UIUC. I like reading novels and drawing!!! The cartoon I like the most is Peppa pig QAQ!!!!
+    </p>
   </body>
  
     
