--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     yuqing xu
   </title>
   
-  <body bgcolor="yellow">
+  <body bgcolor="gray">
     <h1 align="center" style="color:white">Hello!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
     <p> 
     Hello!!! I am Yuqing Xu!! I am a student in the division of general study in UIUC. I like reading novels and drawing!!! The cartoon I like the most is Peppa pig QAQ!!!!
