--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body background="https://github.com/1234aa/yuqingx3.github.io/blob/master/cool-background.jpg?raw=true">
     <h1 align="center" style="color:white;font-size:60px">Hello!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
     <p style="color:white;font-size:35px;"> 
-    Hello!!! I am Yuqing Xu!! I am a student in the division of general study in UIUC. I like reading novels and drawing!!! The cartoon I like the most is Peppa pig QAQ!!!!
+    Hello!!! I am Yuqing Xu!!<br> I am a student in the division of general study in UIUC. <br>I like reading novels and drawing!!!<br> The cartoon I like the most is Peppa pig QAQ!!!!<br>
     </p>
     <img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/IMG_7116.JPG?raw=true"/width="50%">
   </body>
