--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Hello!!! I am Yuqing Xu!!<br> I am a student in the division of general study in UIUC. <br>I like reading novels and drawing!!!<br> The cartoon I like the most is Peppa pig QAQ!!!!<br>
     </p>
     <img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/IMG_7116.JPG?raw=true"/width="50%"><br>
-    <a href="https://www.instagram.com/yuqing9666/"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/instagram-new-2016-logo-4773FE3F99-seeklogo.com.png?raw=true"/></a>
+    <a href="https://www.instagram.com/yuqing9666/"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/instagram-new-2016-logo-4773FE3F99-seeklogo.com.png?raw=true"/width="25%"></a>
   </body>
  
     
