--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/IMG_7116.JPG?raw=true"/width="50%"><br>
     <a href="https://www.instagram.com/yuqing9666/"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/instagram-new-2016-logo-4773FE3F99-seeklogo.com.png?raw=true"/width="5%"></a>
     <a href="http://github.com/1234aa/"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/25231.png?raw=true"/width="5%"></a>
-    <a href="https://github.com/1234aa/yuqingx3.github.io/blob/master/resume.pdf"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/resolution-cv-curriculum-profile-documents-file-3af2ac43d4528985-512x512.png?raw=true"/width="5%"></a>
+    <a href="/resume.pdf"><img src="https://github.com/1234aa/yuqingx3.github.io/blob/master/resolution-cv-curriculum-profile-documents-file-3af2ac43d4528985-512x512.png?raw=true"/width="5%"></a>
   </body>
  
     
